<resources>
    <string name="app_name">Smart Abastecimento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="digite_email">DIGITE SEU EMAIL</string>
    <string name="digite_senha">DIGITE SUA SENHA</string>
    <string name="logar">Logar</string>
    <string name="logo">Logo</string>
    <string name="gasoline">Gasolina</string>
    <string name="ethanol"> Etanol</string>
    <string name="km_road">Km/L - Estrada</string>
    <string name="km_city">Km/L - Cidade</string>
    <string name="calculate">Calcular</string>
    <string name="price_litre">Preço por litro</string>
    <string name="calculate_simple">Calculadora Simples</string>
    <string name="calculate_complete">Calculadora Completa</string>
    <string name="top_calculate">Topo da Calculadora</string>
    <string name="digite_nome">DIGITE SEU NOME</string>
    <string name="register">Cadastrar</string>
    <string name="km">km</string>
    <string name="ethanol_">Etanol -</string>
    <string name="gasoline_">Gasolina -</string>
    <string name="name_station">Nome Estabelecimento</string>
    <string name="distance">Distancia</string>
    <string name="img_brand">Logo dos Estabelecimentos</string>
    <string name="sifron">R$</string>
    <string name="nameUser">Nome do Usuario</string>
    <string name="dateUser">Meus Dados</string>
    <string name="profilemenutitle">Titulo Menu</string>
    <string name="descriptionmenu">Descrição Menu</string>
    <string name="partner">Seja Parceiro</string>
    <string name="name_station_menu">Nome do Estabelecimento :</string>
    <string name="address_menu">Endereço :</string>
    <string name="valor_gasoline">Preço da Gasolina</string>
    <string name="valor_ethanol">Preço do Etanol</string>
    <string name="register_menu">Cadastrar</string>
    <string name="franquia">Franquia</string>
    <string name="shell">Shell</string>
    <string name="texaco">Texaco</string>
    <string name="petrobras">Petrobras</string>
    <string name="ipiranga">Ipiranga</string>
    <string name="ale">Ale</string>
    <string name="outros">Outro</string>
    <string name="hint_45">Ex: R$: 4,50</string>
    <string name="hint_35">Ex: R$: 3,50</string>
    <string name="na_cidade">Na Cidade :</string>
    <string name="resultado_cidade">Resultado Cidade</string>
    <string name="na_estrada">Na Estrada:</string>
    <string name="resultado_estrada">Resultado Estrada</string>
    <string name="resultado_simples">Resultado Simples</string>
    <string name="ic_user">icone do usuario</string>
    <string name="nome_posto">Nome do Posto</string>
    <string name="currentlocation">Usar localização Atual</string>
    <string name="ativarlocaltion">Ativar Localização</string>
    <string name="como_chegar">Como chegar:</string>
    <string name="cep">CEP :</string>
    <string name="numero">Número :</string>
    <string name="nothing">-</string>
    <string name="title_activity_maps">Map</string>
    <string name="contribution">Contribuir / Contato</string>
</resources>